# maca

./: README.md  config.h  configure.ac
src/: .#maca_obj.c  Makefile.am  maca_ana.c  maca_ana.h  maca_elf_parse.c  maca_elf_parse.h  maca_obj.c  maca_obj.h  maca_out.c  maca_out.h  maca_util.c  maca_util.h  main.c
